# ifc-metadata

./: .gitignore  README.md  ifc-metadata.sln
ci/: build.yml
kotlin/: build.gradle.kts  gradlew
kotlin/src/main/kotlin/com/example/ifc/: IfcConversionException.kt  IfcJsonConverter.kt  TransformOptions.kt
kotlin/src/test/kotlin/com/example/ifc/: IfcJsonConverterTest.kt
native/: CMakeLists.txt
native/src/common/: Errors.cpp  Errors.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
native/src/ifc/: IfcModelReader.cpp  IfcModelReader.h  IfcTraverser.cpp  IfcTraverser.h
native/src/jni/: JniBridge.cpp  JniUtils.cpp  JniUtils.h
native/src/json/: JsonWriter.cpp  JsonWriter.h
native/src/mapping/: IdStrategies.cpp  IdStrategies.h  MetaModelBuilder.cpp  MetaModelBuilder.h
native/tests/: CMakeLists.txt
src/: IfcJsonHelper.cs  Metadata.cs  MetadataExtractor.cs  Program.cs  ifc-metadata.csproj
src/ifc-metadata/Properties/: launchSettings.json
tests/native/: SanityTests.cpp
